# blueprint

./: BLUEPRINT_INTERFACE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
docs/: BLUEPRINT_SPEC.md  MASTER_ROADMAP.md  SYSTEM_ARCHITECTURE.md
examples/: example_blueprint.md  valid_blueprint.json
schema/: blueprint_schema_v0.1.0.json
src/blueprint/: __init__.py  cli.py  executor.py  logging.py  models.py  parser.py  scheduler.py  validator.py
src/blueprint/generator/: __init__.py  assembler.py  decomposer.py  interface_inferrer.py
src/blueprint/integrations/: __init__.py  aggregator.py  outpost.py
tests/: __init__.py  test_aggregator.py  test_assembler.py  test_cli.py  test_cli_integration.py  test_decomposer.py  test_executor.py  test_interface_inferrer.py  test_logging.py  test_outpost.py
