[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blueprint-ai"
version = "1.2.0"
description = "Specification compiler for AI agent orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Richie Suarez", email = "richie@zeroechelon.com" }
]
keywords = ["ai", "agents", "orchestration", "specification", "compiler", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
llm = [
    "anthropic>=0.18.0",
]
outpost = [
    "boto3>=1.34.0",
]

[project.scripts]
blueprint = "blueprint.cli:main"

[project.urls]
Homepage = "https://github.com/zeroechelon/blueprint"
Repository = "https://github.com/zeroechelon/blueprint"
Documentation = "https://github.com/zeroechelon/blueprint/blob/main/docs/BLUEPRINT_SPEC.md"

[tool.hatch.build.targets.wheel]
packages = ["src/blueprint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "DTZ",    # flake8-datetimez (BANS datetime.utcnow())
]

# DTZ003: datetime.utcnow() is deprecated, use datetime.now(timezone.utc)
# DTZ005: datetime.now() without tz argument is ambiguous
# DTZ006: datetime.fromtimestamp() without tz argument is ambiguous
# This rule prevents regression of datetime technical debt
